# rbe550_final

./: =1.6  README.txt
franka_description/robots/: depth.xacro  hand.xacro  panda_arm_camera.xacro  panda_arm_hand.urdf.xacro
my_pcl_tutorial/: CMakeLists.txt  package.xml
my_pcl_tutorial/src/: example.cpp
open_cv/: CMakeLists.txt  package.xml
open_cv/launch/: open_cv.launch
open_cv/src/: eye_sub.cpp
panda_moveit_config/: .setup_assistant  package.xml
panda_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  panda.srdf  ros_controllers.yaml
panda_moveit_config/launch/: move_group.launch
panda_moveit_controller/: CMakeLists.txt  package.xml  setup.py
panda_moveit_controller/config/: panda_control.yaml
panda_moveit_controller/launch/: main.launch
panda_moveit_controller/src/: centroidSubscriber.py  main.py  moveitClient.py  moveitServer.py
panda_moveit_controller/srv/: getJointAngles.srv  grip.srv  moveToAngles.srv  moveToPose.srv  sendPIUpdate.srv
panda_simulation/: CMakeLists.txt  package.xml
panda_simulation/launch/: panda_simulation.launch
panda_simulation/scripts/: image_subscriber.py
pcl/: CMakeLists.txt  package.xml
pcl/src/: centroid_grab.cpp  centroid_grab_class.cpp  open3d_ROS.py  segment.py  stitching.py  transformPLC.py
point_cloud/: CMakeLists.txt  package.xml
point_cloud/launch/: point_cloud.launch
point_cloud/src/: point_sub.cpp
rviz_config/: rvizconfig.rviz
sdf/: CMakeLists.txt  package.xml
sdf/door/: model.sdf
sdf/mustard/: mustard.config  mustard.sdf  mustard.urdf  mustard.world
sdf/power_drill/: power_drill.sdf  power_drill.urdf
sdf/pudding_box/: pudding_box.sdf  pudding_box.urdf
